Notify CCP about missing lock file
- Returns error code 400 if lock file is absent in the repository while performing internal scan
